[package]
name = "pixops"
version = "0.1.0"
authors = ["Douglas Lau <doug.p.lau@gmail.com>"]
description = "Pixel / raster image operations"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/pixops"
homepage = "https://github.com/DougLau/pixops"
repository = "https://github.com/DougLau/pixops"
readme = "README.md"
keywords = ["image", "pixel", "compositing", "blend", "image-processing"]
edition = "2018"

[dependencies]
pix = "0.8.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mask_over"
harness = false

[features]
default = ["simd"]
simd = []
